Revert "fix: Add equal heights to skill boxes using flexbox align-items: stretch"
This reverts commit d111c96d877a41e35cc8c4ba9f90105c1dbac371.

--- a/style.css
+++ b/style.css
@@ -306,10 +306,7 @@ section {
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    height: fit-content;
 }
 
 .section-container{
